--- a/addons/web/static/lib/hoot/ui/style.scss
+++ b/addons/web/static/lib/hoot/ui/style.scss
@@ -275,6 +275,10 @@ body {
         font-size: 1.5rem;
     }
 
+    .hoot-transition-colors {
+        transition: background-color 0.15s, color 0.15s, border-color 0.15s;
+    }
+
     .hoot-truncate {
         overflow: hidden;
         text-overflow: ellipsis;
@@ -514,11 +518,15 @@ body {
     }
 
     //-----------------------------------------------------------------------------
-    // HootReporting
+    // Reporting
     //-----------------------------------------------------------------------------
 
     .hoot-reporting {
-        overflow: auto;
+        max-height: 100%;
+    }
+
+    .hoot-results {
+        overflow-y: auto;
     }
 
     .hoot-result {
