comparison with qunit

--- a/addons/web/static/lib/hoot/ui/style.scss
+++ b/addons/web/static/lib/hoot/ui/style.scss
@@ -28,7 +28,7 @@ body {
     margin: 0;
 }
 
-.hoot-runner {
+.hoot {
     // Generic colors
     --hoot-primary: #714b67;
     --hoot-secondary: #74b4b9;
