[IMP] product,website_sale:  Add a option to not display the attribute value
Description of the Pull Request:
In the sales module, there is no provision for removing or archiving attribute
values once they have been linked to a product.

it involves the addition of a boolean field at the attribute value level.
Selecting this field will result in the attribute value being concealed from the
following areas: the /shop interface, the product page, and the input fields

Task ID: 3354857

--- a/addons/product/views/product_attribute_views.xml
+++ b/addons/product/views/product_attribute_views.xml
@@ -46,6 +46,7 @@
                                 <field name="name"/>
                                 <field name="display_type" column_invisible="True"/>
                                 <field name="is_custom" groups="product.group_product_variant" column_invisible="parent.display_type == 'multi'"/>
+                                <field name="is_hidden"/>
                                 <field name="html_color" column_invisible="parent.display_type != 'color'" widget="color"/>
                                 <field name="default_extra_price"/>
                             </tree>
