[FIX] mail: wrong o-fast-popover CSS rule

--- a/addons/mail/static/src/core/common/composer.scss
+++ b/addons/mail/static/src/core/common/composer.scss
@@ -64,10 +64,7 @@
 }
 
 .o-fast-popover {
-    animation: 0.02s slide-right !important;
-    animation: 0.02s slide-left !important;
-    animation: 0.02s slide-top !important;
-    animation: 0.02s slide-bottom !important;
+    animation: none !important;
 }
 
 .o-mail-Composer-fake {
