--- a/addons/pos_self_order/static/src/kiosk/pages/product_list/product_list.scss
+++ b/addons/pos_self_order/static/src/kiosk/pages/product_list/product_list.scss
@@ -1,5 +1,6 @@
 .o_kiosk_product_list {
     .category-list {
+        transition: box-shadow .3s;
 
         .category-item {
             --aspect-ratio: 85%;
