--- a/addons/pos_self_order/static/src/kiosk/components/product_card/product_card.scss
+++ b/addons/pos_self_order/static/src/kiosk/components/product_card/product_card.scss
@@ -1,7 +1,10 @@
 .o_kiosk_product_card {
-    
+
     .o_self_order_item_card_image {
-        object-fit: contain;
-        aspect-ratio:1/1;
+        object-fit: cover;
+    }
+
+    &:active, &:hover, &:focus:not(:focus-visible) {
+        outline: 3px solid var(--companyColor);
     }
 }
