--- a/addons/web/views/partner_view.xml
+++ b/addons/web/views/partner_view.xml
@@ -4,14 +4,14 @@
         <field name="name">Download (vCard)</field>
         <field name="model_id" ref="model_res_partner"/>
         <field name="binding_model_id" ref="model_res_partner"/>
-        <field name="binding_view_types">form</field>
+        <field name="binding_view_types">form,list</field>
         <field name="state">code</field>
         <field name="code">
-            action = {
-                'type': 'ir.actions.act_url',
-                'url': '/web/partner/%d/vcard' % record.id,
-                'target': 'self',
-            }
+action = {
+    'type': 'ir.actions.act_url',
+    'url': '/web_enterprise/partner/vcard?partner_ids=' + ','.join(map(str, records.ids)),
+    'target': 'self',
+}
         </field>
     </record>
 </odoo>
