--- a/addons/pos_self_order/static/src/kiosk/pages/order_cart/order_cart.scss
+++ b/addons/pos_self_order/static/src/kiosk/pages/order_cart/order_cart.scss
@@ -8,7 +8,7 @@
     .o_self_order_item_card_image {
         object-fit: contain;
         aspect-ratio:1/1;
-        min-width: 128px;
+        min-width: 7rem;
     }
 
     .product-wrapper {
