--- a/addons/website/views/website_templates.xml
+++ b/addons/website/views/website_templates.xml
@@ -131,10 +131,9 @@
         <link rel="alternate" t-att-hreflang="lg['hreflang']" t-att-href="lg['href']"/>
         <link rel="alternate" hreflang="x-default" t-att-href="lg['href']" t-if="lg['id'] == website._get_cached('default_lang_id')"/>
         <link rel="canonical" t-att-href="lg['href']" t-if="lg['code']==lang"/>
-            </t><t t-else="">
-        <link rel="canonical" t-att-href="alternate_languages[0]['href']"/>
             </t>
         </t>
+        <link t-if="request and website and website.is_public_user()" rel="canonical" t-att-href="website._get_canonical_url(canonical_params=canonical_params)"/>
         <!-- TODO: Once we have style in DB, add this preconnect only if a
         google font is actually used. Note that if no font is used, the
         preconnect is actually not connecting to the google servers. -->
@@ -1975,7 +1974,7 @@
     </a>
 </template>
 
-<template id="language_selector" inherit_id="" name="Language Selector">
+<template id="language_selector" name="Language Selector">
         <t t-nocache="The query strings can change for the same page and the same rendering."
            t-nocache-no_text="no_text"
            t-nocache-flags="flags"
