--- a/addons/pos_self_order/static/src/kiosk/pages/product_list/product_list.scss
+++ b/addons/pos_self_order/static/src/kiosk/pages/product_list/product_list.scss
@@ -1,11 +1,16 @@
 .o_kiosk_product_list {
     .category-list {
-        height: 225px;
-        overflow-y: hidden;
 
         .category-item {
-            width: 150px;
-            height: 150px;
+            --aspect-ratio: 85%;
+
+            @include o-kiosk-portrait() {
+                width: percentage(1/6);
+            }
+
+            @include o-kiosk-landscape() {
+                width: percentage(1/8);
+            }
         }
 
         img {
@@ -14,19 +19,32 @@
     }
 
     .product-list {
-        overflow-y: scroll;
-        height: calc(100% - 225px);
-
         .product-list-category {
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-        }
+            grid-template-columns: repeat(5, 1fr);
+            gap: 1vw;
 
-        h2:first-of-type {
-            padding-top: 2rem !important;
+            @include o-kiosk-portrait() {
+                grid-template-columns: repeat(4, 1fr);
+            }
         }
     }
 }
 
-.cart {
-    min-width: 330px;
+.o_kiosk_product_list_footer {
+    .info-number svg {
+        aspect-ratio: 1/1;
+        width: 5ch;
+    }
+
+    @include o-kiosk-portrait() {
+        .btn {
+            flex: 0 0 25%;
+        }
+    }
+
+    @include o-kiosk-landscape() {
+        .footer-information-label {
+            visibility: hidden;
+        }
+    }
 }
