--- a/addons/pos_self_order/static/src/kiosk/bootstrap_overridden.scss
+++ b/addons/pos_self_order/static/src/kiosk/bootstrap_overridden.scss
@@ -22,3 +22,8 @@ $input-btn-padding-x: 2rem !default;
 
 $input-btn-padding-y-lg: 2rem !default;
 $input-btn-padding-x-lg: 3rem !default;
+
+$modal-sm: 30rem !default;
+$modal-md: 34rem !default;
+$modal-lg: $modal-md !default;
+$modal-xl:  $modal-md !default;
