--- a/addons/pos_self_order/static/src/kiosk/template/kiosk_template.scss
+++ b/addons/pos_self_order/static/src/kiosk/template/kiosk_template.scss
@@ -5,7 +5,13 @@
             background-size: cover;
         }
     }
-    .content-section {
+
+    .content-section {}
+
+    .content-footer {
+        &:empty {
+            display: none;
+        }
     }
     .o_footer_shadow {
         box-shadow: 0 -0.125rem 0.25rem rgba(0, 0, 0, 0.075);
