--- a/addons/pos_self_order/static/src/kiosk/template/kiosk_template.xml
+++ b/addons/pos_self_order/static/src/kiosk/template/kiosk_template.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <templates id="template" xml:space="preserve">
     <t t-name="pos_self_order.KioskTemplate" owl="1">
-        <div class="o_kiosk-template h-100">
-            <section class="header-section" t-attf-style="height: {{ props.headerHeight }}%;">
+        <div class="o_kiosk-template d-flex flex-column h-100">
+            <section class="header-section">
                 <t t-slot="header" />
             </section>
-            <section class="content-section position-relative z-index-0" t-attf-style="height: {{ props.contentHeight }}%;">
+            <section t-attf-class="content-section position-relative flex-basis-100 z-index-0 {{ props.hasFixedContent ? ' overflow-y-hidden' : 'overflow-y-auto' }}">
                 <t t-slot="content" />
             </section>
-            <section t-attf-class="position-relative p-3 bg-transparent z-index-1 {{ showShadow ? 'o_footer_shadow' : '' }}" t-attf-style="height: {{ props.footerHeight }}%;">
+            <section t-attf-class="content-footer position-relative p-3 bg-transparent z-index-1 {{ showShadow ? 'o_footer_shadow' : '' }}">
                 <t t-slot="footer" />
             </section>
         </div>
