--- a/addons/pos_self_order/static/src/kiosk/pages/combo/combo.scss
+++ b/addons/pos_self_order/static/src/kiosk/pages/combo/combo.scss
@@ -1,50 +1,6 @@
-.breadcrumb {
-    max-height: 99px;
-
-    div:first-child {
-        margin-left: -15px;
-    }
-
-    div:last-child {
-        padding-right: 15px;
-        > span:after, > span:before {
-            border: none;
-        }
-    }
-
-    div > span {
-        padding: 1% 0 1% 60px;
-        padding-right: 20px;
-
-        &:after,
-        &:before {
-            content: " ";
-            border-top: 50px solid transparent;
-            border-bottom: 50px solid transparent;
-            position: absolute;
-            top: 50%;
-            margin-top: -50px;
-            margin-left: -1px;
-        }
-
-        &:after {
-            border-left: 30px solid $o-gray-200;
-            left: 100%;
-            z-index: 2;
-        }
-
-        &:before {
-            border-left: 30px solid $o-gray-300;
-            margin-left: 1px;
-            left: 100%;
-            z-index: 1;
-        }
-    }
-
-    div.active-step span {
-        &:after {
-            border-left: 30px solid $o-gray-100;
-        }
+.active-step {
+    .o_kiosk_combo_icon, ~ .step .o_kiosk_combo_icon {
+        visibility: hidden;
     }
 }
 
