bail + strengthn URL params consistency + 'canRun'

--- a/addons/web/static/lib/hoot/ui/style.scss
+++ b/addons/web/static/lib/hoot/ui/style.scss
@@ -285,6 +285,10 @@ body {
         white-space: nowrap;
     }
 
+    .hoot-w-1\/4 {
+        width: 25%;
+    }
+
     .hoot-w-full {
         width: 100%;
     }
