--- a/addons/account/views/report_invoice.xml
+++ b/addons/account/views/report_invoice.xml
@@ -432,7 +432,7 @@
             <t t-call="web.html_container">
                 <t t-foreach="docs" t-as="o">
                     <t t-set="lang" t-value="o.partner_id.lang"/>
-                    <t t-if="o._get_name_invoice_report() == 'account.report_invoice_document'"
+                    <t t-if="o._get_name_invoice_report() == 'account.report_invoice_with_payments'"
                        t-call="account.report_invoice_document"
                        t-lang="lang"/>
                 </t>
