--- a/addons/account/views/account_analytic_line_views.xml
+++ b/addons/account/views/account_analytic_line_views.xml
@@ -14,6 +14,10 @@
                     <xpath expr="//field[@name='product_uom_id']" position="before">
                         <field name="product_id"/>
                     </xpath>
+                    <xpath expr="//field[@name='account_id']" position="after">
+                        <field name="account2_id"/>
+                        <field name="account3_id"/>
+                    </xpath>
                     <group name="amount" position="after">
                         <group/> <!-- put Accounting group under Amount group -->
                         <group name="accounting" string="Accounting">
