--- a/addons/web/static/lib/hoot/ui/style.scss
+++ b/addons/web/static/lib/hoot/ui/style.scss
@@ -81,7 +81,7 @@ body {
     // Breakpoints
     $hoot-break-sm: 576px;
 
-    &.dark {
+    &.hoot-dark {
         // Generic colors
         --hoot-primary: #14b8a6;
         --hoot-danger: #fb7185;
