--- a/addons/sale/report/sale_report_views.xml
+++ b/addons/sale/report/sale_report_views.xml
@@ -82,10 +82,7 @@
                     <filter string="Status" name="status" context="{'group_by':'state'}"/>
                     <filter string="Company" name="company" groups="base.group_multi_company" context="{'group_by':'company_id'}"/>
                     <separator/>
-                    <filter string="Order Date" name="date" context="{'group_by':'date'}"
-                            invisible="context.get('sale_report_view_hide_date')"/>
-                    <filter string="Order Date" name="group_by_date_day" context="{'group_by':'date:day'}"
-                            invisible="not context.get('sale_report_view_hide_date')"/>
+                    <filter string="Order Date" name="group_by_date" context="{'group_by':'date'}"/>
                 </group>
             </search>
         </field>
