--- a/addons/website/views/website_views.xml
+++ b/addons/website/views/website_views.xml
@@ -324,7 +324,7 @@
             id="menu_website_configuration"
             sequence="95"
             groups="base.group_user"
-            web_icon="website,static/description/icon.png"/>
+            web_icon="website,static/description/icon.svg"/>
 
         <menuitem id="menu_site"
             name="Site"
