--- a/odoo/addons/base/views/base_menus.xml
+++ b/odoo/addons/base/views/base_menus.xml
@@ -4,7 +4,7 @@
       <!-- Top menu item -->
       <menuitem name="Settings"
           id="menu_administration"
-          web_icon="base,static/description/settings.svg"
+          web_icon="base,static/description/settings.png"
           sequence="550"
           groups="base.group_erp_manager"/>
           <menuitem id="menu_management" name="Apps" sequence="500" web_icon="base,static/description/modules.png" groups="base.group_system"/>
@@ -24,7 +24,7 @@
               <menuitem id="menu_security" name="Security" parent="menu_custom" sequence="25"/>
               <menuitem id="menu_ir_property" name="Parameters" parent="menu_custom" sequence="24"/>
 
-          <menuitem id="base.menu_tests" name="Tests" sequence="1000" web_icon="test_exceptions,static/description/icon.svg"/>
+          <menuitem id="base.menu_tests" name="Tests" sequence="1000" web_icon="test_exceptions,static/description/icon.png"/>
 
       <record model="ir.ui.menu" id="base.menu_administration">
           <field name="groups_id" eval="[Command.set([ref('group_system'), ref('group_erp_manager')])]"/>
