--- a/addons/website/views/ir_actions_server_views.xml
+++ b/addons/website/views/ir_actions_server_views.xml
@@ -9,27 +9,14 @@
             <field name="arch" type="xml">
                 <data>
                     <xpath expr="//field[@name='state']" position="after">
-                        <field name="website_published"
-                            invisible="state != 'code'"/>
                         <field name="xml_id" invisible="1"/>
-                        <field name="website_path"
-                            invisible="not website_published or state != 'code'"/>
-                        <field name="website_url" widget="url"
+                        <field name="url_path"
+                            invisible="expose != 'website' or state != 'code'" readonly="False"/>
+                        <field name="url" widget="CopyClipboardURL"
                             readonly="1"
-                            invisible="not website_published or state != 'code'"/>
+                            invisible="expose != 'website' or state != 'code'"/>
                     </xpath>
                 </data>
-            </field>
-        </record>
-
-        <record model="ir.ui.view" id="view_server_action_tree_website">
-            <field name="name">ir.actions.server.tree.website</field>
-            <field name="model">ir.actions.server</field>
-            <field name="inherit_id" ref="base.view_server_action_tree"/>
-            <field name="arch" type="xml">
-                <xpath expr="//field[@name='model_id']" position="after">
-                    <field name="website_url"/>
-                </xpath>
             </field>
         </record>
 
@@ -40,7 +27,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='state']" position="after">
                     <filter string="Website" name="website"
-                        domain="[('website_published', '=', True), ('state', '=', 'code')]"/>
+                        domain="[('expose', '=', 'website'), ('state', '=', 'code')]"/>
                 </xpath>
             </field>
         </record>
