--- a/addons/website_sale/views/product_views.xml
+++ b/addons/website_sale/views/product_views.xml
@@ -166,7 +166,7 @@
                     <field name="website_ribbon_id" groups="base.group_no_one" options="{'no_quick_create': True}"/>
                 </group>
                 <group name="product_template_images" string="Extra Product Media" invisible="not sale_ok">
-                    <field name="product_template_image_ids" class="o_website_sale_image_list" context="{'default_name': name}" mode="kanban" add-label="Add a Media" nolabel="1"/>
+                    <field name="product_template_image_ids" widget="add_media" nolabel="1"/>
                 </group>
                 <group string="eCommerce Description">
                     <field name="description_ecommerce"
