--- a/addons/website/static/src/components/dialog/dialog.scss
+++ b/addons/website/static/src/components/dialog/dialog.scss
@@ -2,32 +2,26 @@
     label {
         font-weight: $font-weight-bold;
     }
-    .o_notebook.vertical {
-        .o_notebook_headers {
-            overflow-x: unset;
+
+    &.o_website_page_templates_dialog {
+        max-height: $modal-lg !important;
+
+        .modal-body {
+            display: flex;
+            padding: 0;
         }
-        .o_notebook_content .o_page_template {
-            position: relative;
-            border: 2px solid gray;
 
-            &.o_loading {
-                cursor: wait;
-                opacity: 5%;
-                filter: brightness(70%);
-            }
-            &:not(.o_loading):hover {
-                border: 2px solid black;
-                .o_page_template_preview {
-                    filter: brightness(70%) contrast(60%);
-                }
-                .o_button_area {
-                    display: flex;
-                }
-            }
-            &:empty {
-                opacity: 0; // Hide empty column filler
-            }
+        .modal-footer {
+            display: none;
+        }
 
+        .o_website_page_templates_pane.active {
+            // Avoid using "display: [none/block]" to trigger the tabs behavior
+            // because doing so would recalculate iframes' height.
+            z-index: 1;
+        }
+
+        .o_page_template {
             $-iframe-width: 1024;
             $-preview-width: 275; // Empirically obtained
             $-preview-width-xl: 220; // Empirically obtained
@@ -45,11 +39,9 @@
                 height: 300px;
                 padding: 0;
                 overflow: hidden;
-    
+
                 iframe {
-                    pointer-events: none;
                     width: #{$-iframe-width}px;
-                    border: 0;
                     transform: scale($-preview-width / $-iframe-width);
                     @include media-breakpoint-down(xl) {
                         transform: scale($-preview-width-xl / $-iframe-width);
@@ -59,18 +51,49 @@
                     }
                     transform-origin: 0 0;
                 }
+
+                &, iframe {
+                    opacity: 0;
+                    transition: height 300ms ease-in, opacity 300ms ease 300ms;
+                }
             }
+
+            .placeholder {
+                transition: opacity 1s ease;
+            }
+
             .o_button_area {
-                position: absolute;
-                top: 60px;
-                left: 0;
-                right: 0;
-                display: none;
-                flex-flow: column nowrap;
-                padding: 10% 20%;
-    
-                button {
-                    align-self: center;
+                opacity: 0;
+            }
+
+            &:empty {
+                opacity: 0; // Hide empty column filler
+            }
+
+            &.o_loading {
+                cursor: wait;
+            }
+
+            &.o_ready {
+                .placeholder {
+                    animation: none;
+                    opacity: 0;
+                }
+
+                .o_page_template_preview, iframe {
+                    opacity: 1;
+                }
+
+                &:hover {
+                    transform: translateY(-0.15rem);
+
+                    iframe {
+                        opacity: .1;
+                    }
+
+                    .o_button_area {
+                        opacity: 1;
+                    }
                 }
             }
         }
