--- a/addons/web/static/src/core/dropdown/dropdown.scss
+++ b/addons/web/static/src/core/dropdown/dropdown.scss
@@ -53,7 +53,7 @@
             right: 10px;
         }
 
-        &.o-dropdown--open:after {
+        &.show:after {
             transform: rotate(180deg);
         }
 
