--- a/addons/project/views/project_task_views.xml
+++ b/addons/project/views/project_task_views.xml
@@ -391,7 +391,7 @@
                                     <field name="parent_id" column_invisible="True"/>
                                     <field name="priority" widget="priority" nolabel="1" options="{'autosave': False}" width="40px"/>
                                     <field name="state" widget="project_task_state_selection" nolabel="1" options="{'hide_label': 1, 'autosave':  False}" width="40px"/>
-                                    <field name="name" widget="name_with_subtask_count"/>
+                                    <field name="name" widget="name_with_subtask_count" default_focus="1"/>
                                     <field name="subtask_count" column_invisible="True"/>
                                     <field name="closed_subtask_count" column_invisible="True"/>
                                     <field name="project_id" string="Project" optional="hide" options="{'no_open': 1}" widget="project"/>
