--- a/addons/web/views/webclient_templates.xml
+++ b/addons/web/views/webclient_templates.xml
@@ -219,6 +219,10 @@
             <t t-set="head">
                 <t t-call-assets="web.unit_tests_assets" t-js="false"/>
                 <t t-call-assets="web.unit_tests_assets" t-css="false"/>
+
+                <t t-call-assets="web.assets_backend" />
+                <t t-call-assets="web.unit_tests" t-js="false"/>
+                <t t-call-assets="web.unit_tests" t-css="false"/>
             </t>
         </t>
     </template>
