[IMP] rating,web_editor,website_sale: remove old Bootstrap data attrs
Since the upgrade of Bootstrap from v4 to v5, the Buttons' toggling in a
group (aka radio button-like) doesn't require a `data-bs-toggle="buttons"`
attribute anymore.

This commit removes the reminiscence of the Bootstrap v4 implementation,
even though the DOM was already adapted accordingly, leaving the old
data attributes without any purpose/effect.

Reference:
https://getbootstrap.com/docs/5.0/migration/#buttons

--- a/addons/website_sale/views/variant_templates.xml
+++ b/addons/website_sale/views/variant_templates.xml
@@ -66,8 +66,7 @@
 
                     <t t-elif="ptal.attribute_id.display_type == 'pills'">
                         <ul t-att-data-attribute_id="ptal.attribute_id.id"
-                            t-attf-class="btn-group-toggle list-inline list-unstyled o_wsale_product_attribute #{'d-none' if single_and_custom else ''}"
-                            data-bs-toggle="buttons">
+                            t-attf-class="list-inline list-unstyled o_wsale_product_attribute #{'d-none' if single_and_custom else ''}">
                             <t t-foreach="ptal.product_template_value_ids._only_active()" t-as="ptav">
                                 <li t-attf-class="o_variant_pills btn btn-primary mb-1 list-inline-item js_attribute_value #{'active' if ptav in combination else ''}">
                                     <input type="radio"
