--- a/addons/rating/views/rating_templates.xml
+++ b/addons/rating/views/rating_templates.xml
@@ -24,9 +24,7 @@
                     <div class="row text-center justify-content-center">
                         <h1 class="col-12 mt-5">Thank you for rating our services!</h1>
                         <form class="col-md-6" t-attf-action="/rate/#{token}/submit_feedback" method="post">
-                            <div class="btn-group row flex-nowrap justify-content-center w-100 mt-5"
-                                 role="group"
-                                 data-bs-toggle="buttons">
+                            <div class="btn-group row flex-nowrap justify-content-center w-100 mt-5" role="group">
                                 <t t-foreach="rate_names" t-as="rate_name">
                                     <input type="radio" name="rate"
                                            class="btn-check"
