[IMP] payment: improve pending transaction status message
Before this commit, when a transaction enters the pending stage,
customers are shown a warning message that reads "Your payment has been
successfully processed but is waiting for approval".  This seems a bit
confusing as it shows payment successfully but is waiting for approval.

After this commit, we have made the default pending payment message more
understandable with the `Contact Us` link which leads to the chatter of
ongoing transaction order.

task-3323600

--- a/addons/website_sale/views/templates.xml
+++ b/addons/website_sale/views/templates.xml
@@ -2435,6 +2435,10 @@
                     </a>
                     <t t-if="tx_sudo.state == 'pending'">
                         <t t-out="tx_sudo.provider_id.sudo().pending_msg"/>
+                        <!-- <t t-set="default_pending_msg" t-value="tx_sudo.provider_id.sudo().pending_msg"/>
+                        <t t-set="modified_default_pending_msg"
+                           t-value="default_pending_msg.replace('#discussion', '/my/orders/%s?access_token=%s#discussion' % (order.id, order.access_token))"/>
+                        <t t-out="modified_default_pending_msg or default_pending_msg"/> -->
                     </t>
                     <t t-if="tx_sudo.state == 'done'">
                         <span t-if='tx_sudo.provider_id.sudo().done_msg' t-out="tx_sudo.provider_id.sudo().done_msg"/>
